--- a/po/tr.po
+++ b/po/tr.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: tr\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-07-06 18:11-0500\n"
-"PO-Revision-Date: 2007-07-07 07:23+0300\n"
+"POT-Creation-Date: 2007-07-11 18:53-0500\n"
+"PO-Revision-Date: 2007-07-09 16:31+0300\n"
 "Last-Translator: Uğur Çetin <jnmbk@users.sourceforge.net>\n"
 "Language-Team: Turkish <tr@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -40,7 +40,7 @@ msgid "GMail's login procedure has changed, check for new version"
 msgstr ""
 "GMail'in giriş algoritması değişmiş, yeni bir sürüm var mı diye kontrol edin"
 
-#: gmail.cpp:326
+#: gmail.cpp:332
 msgid "Unknown error retrieving cookies"
 msgstr "Çerezlar alınırken bilinmeyen bir hata oluştu"
 
@@ -238,8 +238,8 @@ msgid "Unable to retrieve secure password"
 msgstr "Güvenli parola alınamadı"
 
 #. Name
-#: kcheckgmail.desktop:1 kcheckgmailtray.cpp:89 kcheckgmailtray.cpp:140
-#: main.cpp:44
+#: kcheckgmailtray.cpp:89 kcheckgmailtray.cpp:140 main.cpp:44
+#: kcheckgmail.desktop:1
 msgid "KCheckGMail"
 msgstr "KCheckGmail"
 
@@ -284,10 +284,11 @@ msgid "Welcome"
 msgstr "Hoş Geldiniz"
 
 #: kcheckgmailtray.cpp:208
+#, fuzzy
 msgid ""
 "Google, Gmail and Google Mail are registered trademarks of Google Inc.\n"
-"KCheckGMail nor it's authors are in any way affiliated nor endorsed by "
-"Google Inc.\n"
+"KCheckGMail nor its authors are in any way affiliated nor endorsed by Google "
+"Inc.\n"
 "By using this application you may or may not be violating the Terms of Use "
 "and/or the Program Policies of Gmail or Google Mail.\n"
 "Are you sure you want to use KCheckGMail?"
@@ -309,6 +310,8 @@ msgid ""
 "%1\n"
 "Attachments: %2"
 msgstr ""
+"%1\n"
+"Ekler: %2"
 
 #: kcheckgmailtray.cpp:402
 msgid "Login"
@@ -332,12 +335,11 @@ msgstr "Davranış"
 
 #: kcheckgmailtray.cpp:411
 msgid "Advanced"
-msgstr ""
+msgstr "Gelişmiş"
 
 #: kcheckgmailtray.cpp:411
-#, fuzzy
 msgid "Advanced Settings"
-msgstr "Giriş Ayarları"
+msgstr "Gelişmiş Ayarlar"
 
 #: kcheckgmailtray.cpp:429
 msgid "No account information has been entered. Do you want to quit?"
@@ -351,6 +353,11 @@ msgid ""
 "inbox use <i>in:inbox</i> or leave empty.</p><p>Are you sure you want to "
 "proceed without specifying location?</p>"
 msgstr ""
+"<p>Verdiğiniz arama anahtarı okunmamış e-postaların nerede aranacağını "
+"belirtmiyor.</p><p><i>in:</i> ve <i>label:</i> içermeyen bir arama tüm "
+"okunmamış e-postaları bulacaktır.</p><p>İstediğiniz şey gelen kutunuzdaki e-"
+"postaları aramaksa <i>in:inbox</i> kullanın veya boş bırakın.</p><p>Bir yer "
+"belirtmeden devam etmek istediğinize emin misiniz?</p>"
 
 #: kcheckgmailtray.cpp:474
 msgid ""
@@ -358,6 +365,9 @@ msgid ""
 "should be set to ensure more unread messages are retrieved.</p><p>Are you "
 "sure you want to proceed?</p>"
 msgstr ""
+"<p>Verdiğiniz arama anahtarı <i>is:unread</i> içermiyor.</p><p>Daha çok "
+"okunmamış mesajın bulunması için bu kullanılmalıdır.</p><p>Devam etmek "
+"istediğinizden emin misiniz?</p>"
 
 #: kcheckgmailtray.cpp:520
 msgid "An error occurred logging in to Gmail<br><b>%1</b>"
@@ -379,13 +389,12 @@ msgid ""
 msgstr "<b>%n</b> tane yeni e-postanız var"
 
 #: kcheckgmailtray.cpp:572
-#, fuzzy
 msgid "New mail arrived: <i>%1</i>"
-msgstr "Yeni Gmail Geldi"
+msgstr "Yeni bir posta geldi: <i>%1</i>"
 
 #: kcheckgmailtray.cpp:580
 msgid "There are no unread messages"
-msgstr ""
+msgstr "Okunmamış posta yok"
 
 #: kcheckgmailtray.cpp:627
 msgid "An other account has been opened, logging out from it!"
@@ -447,11 +456,12 @@ msgid "Everybody who helped testing and translating KCheckGMail"
 msgstr "KCheckGMail test eden ve çeviren herkese"
 
 #: main.cpp:70
+#, fuzzy
 msgid ""
 "Legal Information:\n"
 "Google, Gmail and Google Mail are registered trademarks of Google Inc.\n"
-"KCheckGMail nor it's authors are in any way affiliated nor endorsed by "
-"Google Inc."
+"KCheckGMail nor its authors are in any way affiliated nor endorsed by Google "
+"Inc."
 msgstr ""
 "Yasal Uyarı:\n"
 "Google, Gmail ve Google Mail; Google Inc.'in ticari markalarıdır. \n"
@@ -463,21 +473,21 @@ msgstr "KCheckGMail zaten çalışıyor!\n"
 
 #. i18n: file advancedsettingswidget.ui line 16
 #: rc.cpp:3
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "AdvancedSettingsWidget"
-msgstr "AppletSettingsWidget"
+msgstr "AdvancedSettingsWidget"
 
 #. i18n: file advancedsettingswidget.ui line 61
 #: rc.cpp:6 rc.cpp:94
 #, no-c-format
 msgid "Open Gmail in simple interface"
-msgstr ""
+msgstr "Gmail'i basit arayüzle aç"
 
 #. i18n: file advancedsettingswidget.ui line 72
 #: rc.cpp:10 rc.cpp:88
 #, no-c-format
 msgid "Search For:"
-msgstr ""
+msgstr "Ara:"
 
 #. i18n: file appletsettingswidget.ui line 16
 #: rc.cpp:13
@@ -501,19 +511,19 @@ msgstr "Gmail sürümü değişirse uyarı göster"
 #: rc.cpp:22
 #, no-c-format
 msgid "Other"
-msgstr ""
+msgstr "Diğer"
 
 #. i18n: file appletsettingswidget.ui line 78
 #: rc.cpp:25
 #, no-c-format
 msgid "Display sub&ject when only one new email arrives"
-msgstr ""
+msgstr "Sadece bir tane e-posta geldiğinde &konuyu göster"
 
 #. i18n: file appletsettingswidget.ui line 81
 #: rc.cpp:28
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Alt+J"
-msgstr "Alt+U"
+msgstr "Alt+J"
 
 #. i18n: file appletsettingswidget.ui line 96
 #: rc.cpp:31
@@ -529,9 +539,9 @@ msgstr "Başka tarayıcı kullan"
 
 #. i18n: file appletsettingswidget.ui line 171
 #: rc.cpp:37
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "&Use the default KDE browser"
-msgstr "Varsayılan KDE tarayıcısını kullan"
+msgstr "&Varsayılan KDE tarayıcısını kullan"
 
 #. i18n: file appletsettingswidget.ui line 174
 #: rc.cpp:40 rc.cpp:67 rc.cpp:82
@@ -547,15 +557,15 @@ msgstr "Sistem Çekmecesi Simgesi"
 
 #. i18n: file appletsettingswidget.ui line 239
 #: rc.cpp:46
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Open &browser to Gmail on left click"
-msgstr "Sol tuşla tıklanınca tarayıcıda Gmail açılsın"
+msgstr "&Sol tuşla tıklanınca tarayıcıda Gmail açılsın"
 
 #. i18n: file appletsettingswidget.ui line 242
 #: rc.cpp:49
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Alt+B"
-msgstr "Alt+U"
+msgstr "Alt+B"
 
 #. i18n: file appletsettingswidget.ui line 250
 #: rc.cpp:52 rc.cpp:142
@@ -629,6 +639,8 @@ msgid ""
 "When checking for new email's this is the search query sent to Google Mail. "
 "Don't forget to add is:unread to improve the search."
 msgstr ""
+"Yeni e-postalar kontrol edilirken Google Mail'e bu sorgu gönderilir. Aramayı "
+"iyileştirmek için is:unread eklemeyi unutmayın."
 
 #. i18n: file prefs.kcfg line 14
 #: rc.cpp:97
@@ -637,6 +649,8 @@ msgid ""
 "This option lets you make KCheckGMail open Gmail using the simple interface "
 "(only HTML) or the full interface (unmarked)."
 msgstr ""
+"Bu seçenek KCheckGmail'in Gmail'i basit arayüzle (sadece HTML) veya tam "
+"arayüzüyle açmanızı sağlar (seçili değilken)"
 
 #. i18n: file prefs.kcfg line 19
 #: rc.cpp:100
@@ -716,23 +730,24 @@ msgstr "Sol tuşla tıklanınca tarayıcıda Gmail açılsın"
 
 #. i18n: file prefs.kcfg line 57
 #: rc.cpp:139
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "If enabled, launch the default KDE web browser when the KCheckGMail icon is "
 "clicked."
 msgstr ""
-"Etkinse KCheckGmail simgesi tıklandığında varsayılan KDE tarayıcısı başlar."
+"Etkinse KCheckGmail simgesi tıklandığında varsayılan KDE tarayıcısını başlat."
 
 #. i18n: file prefs.kcfg line 62
 #: rc.cpp:145
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "If enabled, every time you click on the KCheckGMail icon will disable it for "
 "a few seconds, thus preventing you from accidentaly opening more than one "
 "window"
 msgstr ""
-"Etkinse KCheckGmail simgesi tıklandığında birkaç saniyeliğine simge "
-"tıklanamaz hale gelir. Böylece birden fazla tarayıcı penceresi açılmaz"
+"Etkinse KCheckGmail simgesi tıklandığında birkaç saniyeliğine simgeyi "
+"tıklanamaz hale getir. Böylece yanlışlıkla birden fazla tarayıcı penceresi "
+"açmanız engellenir"
 
 #. i18n: file prefs.kcfg line 65
 #: rc.cpp:148
@@ -763,13 +778,13 @@ msgstr "Gmaile gitmek için KDE varsayılanı dışında bir tarayıcı kullanı
 #: rc.cpp:163
 #, no-c-format
 msgid "Display subject when only one new email arrives"
-msgstr ""
+msgstr "Sadece bir e-posta elince konuyu göster"
 
 #. i18n: file prefs.kcfg line 81
 #: rc.cpp:166
 #, no-c-format
 msgid "Display message's subject when only one new email arrives"
-msgstr ""
+msgstr "Sadece bir e-posta elince o mesajın konusunu göster"
 
 #. new-gmail-arrived - Name new-gmail-arrived - Comment
 #: eventsrc:1 eventsrc:2
@@ -811,6 +826,17 @@ msgstr "Posta Özetleri"
 msgid "eMail snippets when moving the mouse over a threads menu entry"
 msgstr "Fareyi menüdeki bir konunun üzerine getirince görünen e-posta özetleri"
 
+#. no-unread-gmail - Name
+#: eventsrc:13
+msgid "No unread email"
+msgstr ""
+
+#. no-unread-gmail - Comment
+#: eventsrc:14
+#, fuzzy
+msgid "Dummy notification triggered when there are no unread messages"
+msgstr "Okunmamış posta yok"
+
 #. GenericName
 #: kcheckgmail.desktop:2
 msgid "New email notifier"
@@ -824,31 +850,3 @@ msgid ""
 msgstr ""
 "Gmail hesabınızda kaç tane yeni e-posta olduğunu gösteren bir panel "
 "programcığıdır."
-
-#~ msgid "&Snooze"
-#~ msgstr "&Bekleme"
-
-#~ msgid "KCheckGMail - Snoozing"
-#~ msgstr "KCheckGmail - Bekliyor"
-
-#~ msgid "Snoo&ze Period"
-#~ msgstr "&Bekleme Süresi"
-
-#~ msgid " minutes"
-#~ msgstr " dakika"
-
-#~ msgid "Snooze period"
-#~ msgstr "Bekleme süresi"
-
-#~ msgid "How many minutes to snooze."
-#~ msgstr "Beklenecek dakika."
-
-#~ msgid "Only search for new messages in inbox"
-#~ msgstr "Sadece gelen kutusundaki mesajlarımesajları ara"
-
-#~ msgid ""
-#~ "By disabling this option new messages are searched in anywhere (this "
-#~ "includes spam, trash, etc)."
-#~ msgstr ""
-#~ "Bunu iptal ederseniz Çöp Kutusu ve Spam gibi diğer bölümlere gelen e-"
-#~ "postalar da kontrol edilir."
