--- a/po/es.po
+++ b/po/es.po
@@ -5,10 +5,11 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
-"POT-Creation-Date: 2007-07-06 18:11-0500\n"
-"PO-Revision-Date: 2007-07-06 19:32-0500\n"
-"Last-Translator: Raphael Geissert <atomo64@gmail.com>\n"
-"Language-Team: Spanish <es@li.org>\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2007-07-11 18:53-0500\n"
+"PO-Revision-Date: 2007-07-15 18:20-0500\n"
+"Last-Translator: Raphael G <atomo64@gmail.com>\n"
+"Language-Team: Spanish\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -38,7 +39,7 @@ msgstr ""
 "El procedimiento de inicio de sesión ha cambiado, verifique la "
 "disponibilidad de una nueva versión"
 
-#: gmail.cpp:326
+#: gmail.cpp:332
 msgid "Unknown error retrieving cookies"
 msgstr "Error desconocido al obtener las cookies"
 
@@ -204,8 +205,7 @@ msgstr "Búlgaro"
 
 #: gmailwalletmanager.cpp:101
 msgid "KCheckGMail could not open the wallet. Please check your preferences."
-msgstr ""
-"KCheckGMail no pudo abrir KWallet. Por favor compruebe las preferencias."
+msgstr "KCheckGMail no pudo abrir KWallet. Por favor compruebe las preferencias."
 
 #: gmailwalletmanager.cpp:185
 msgid ""
@@ -236,8 +236,8 @@ msgid "Unable to retrieve secure password"
 msgstr "No ha sido posible obtener la clave de forma segura"
 
 #. Name
-#: kcheckgmail.desktop:1 kcheckgmailtray.cpp:89 kcheckgmailtray.cpp:140
-#: main.cpp:44
+#: kcheckgmailtray.cpp:89 kcheckgmailtray.cpp:140 main.cpp:44
+#: kcheckgmail.desktop:1
 msgid "KCheckGMail"
 msgstr "KCheckGMail"
 
@@ -285,8 +285,8 @@ msgstr "Bienvenido"
 #: kcheckgmailtray.cpp:208
 msgid ""
 "Google, Gmail and Google Mail are registered trademarks of Google Inc.\n"
-"KCheckGMail nor it's authors are in any way affiliated nor endorsed by "
-"Google Inc.\n"
+"KCheckGMail nor its authors are in any way affiliated nor endorsed by Google "
+"Inc.\n"
 "By using this application you may or may not be violating the Terms of Use "
 "and/or the Program Policies of Gmail or Google Mail.\n"
 "Are you sure you want to use KCheckGMail?"
@@ -464,8 +464,8 @@ msgstr "Todos aquellos que ayudaron a probar y traducir KCheckGMail"
 msgid ""
 "Legal Information:\n"
 "Google, Gmail and Google Mail are registered trademarks of Google Inc.\n"
-"KCheckGMail nor it's authors are in any way affiliated nor endorsed by "
-"Google Inc."
+"KCheckGMail nor its authors are in any way affiliated nor endorsed by Google "
+"Inc."
 msgstr ""
 "Información legal:\n"
 "Google, Gmail y Google Mail son marcas registradas de Google Inc.\n"
@@ -696,8 +696,7 @@ msgstr "Nombre de usuario"
 #: rc.cpp:115
 #, no-c-format
 msgid "Your Gmail username or your Google Hosted Domain email address"
-msgstr ""
-"Nombre de usuario de Gmail o la dirección de correo del Google Hosted Domain"
+msgstr "Nombre de usuario de Gmail o la dirección de correo del Google Hosted Domain"
 
 #. i18n: file prefs.kcfg line 38
 #: rc.cpp:118
@@ -765,8 +764,7 @@ msgstr "Utilizar el navegador predefinido de KDE"
 #. i18n: file prefs.kcfg line 67
 #: rc.cpp:151
 #, no-c-format
-msgid ""
-"Use whatever browser is configured as the KDE default to check your Gmail"
+msgid "Use whatever browser is configured as the KDE default to check your Gmail"
 msgstr ""
 "Utilizar el navegador predefinido como navegador por defecto de KDE para "
 "comprobar Gmail"
@@ -837,6 +835,16 @@ msgstr "Fragmentos de email"
 msgid "eMail snippets when moving the mouse over a threads menu entry"
 msgstr "Fragmento de email al mover el cursor sobre una conversación"
 
+#. no-unread-gmail - Name
+#: eventsrc:13
+msgid "No unread email"
+msgstr "No hay mensajes sin leer"
+
+#. no-unread-gmail - Comment
+#: eventsrc:14
+msgid "Dummy notification triggered when there are no unread messages"
+msgstr "Simple notificación ejecutada cuando no hay mensajes sin leer"
+
 #. GenericName
 #: kcheckgmail.desktop:2
 msgid "New email notifier"
@@ -850,3 +858,4 @@ msgid ""
 msgstr ""
 "Mini aplicación que muestra el número de mensajes sin leer en una cuenta de "
 "Gmail."
+
